--- a/xFunc.Logics/Resources/Resource.resx
+++ b/xFunc.Logics/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AssignVariable" xml:space="preserve">
+    <value>The value '{1}' was assigned to the variable '{0}'.</value>
+  </data>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>An error occurred while parsing the tree.</value>
   </data>
