--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -286,6 +286,6 @@
     <value>Версия:</value>
   </data>
   <data name="ViewRibbonTab" xml:space="preserve">
-    <value>Представление</value>
+    <value>Вид</value>
   </data>
 </root>
