--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -118,177 +118,177 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AboutButtonHeader" xml:space="preserve">
-    <value>О программе</value>
+    <value>Про програму</value>
   </data>
   <data name="AboutButtonToolTip" xml:space="preserve">
-    <value>Открыть окно "О программе"</value>
+    <value>Відкрити вікно "Про програму"</value>
   </data>
   <data name="AboutWindowTitle" xml:space="preserve">
-    <value>О программе</value>
+    <value>Про програму</value>
   </data>
   <data name="AdditionalExpanderHeader" xml:space="preserve">
-    <value>Дополнительные</value>
+    <value>Додаткові</value>
   </data>
   <data name="AnglesGroupHeader" xml:space="preserve">
-    <value>Меры измерения углов</value>
+    <value>Одиниці виміру кутів</value>
   </data>
   <data name="AnswerTextBox" xml:space="preserve">
-    <value>Ответ:</value>
+    <value>Рішення:</value>
   </data>
   <data name="Author" xml:space="preserve">
-    <value>Дмитрий Кищенко</value>
+    <value>Дмитро Кіщенко</value>
   </data>
   <data name="AuthorTextBox" xml:space="preserve">
-    <value>Разработчик:</value>
+    <value>Розробник:</value>
   </data>
   <data name="ClipboardGroupHeader" xml:space="preserve">
-    <value>Буфер обмена</value>
+    <value>Буфер обміну</value>
   </data>
   <data name="cm" xml:space="preserve">
     <value>см</value>
   </data>
   <data name="ConstantsExpanderHeader" xml:space="preserve">
-    <value>Константы</value>
+    <value>Констати</value>
   </data>
   <data name="CopyButtonHeader" xml:space="preserve">
-    <value>Копировать</value>
+    <value>Копіювати</value>
   </data>
   <data name="CopyScreenTipText" xml:space="preserve">
-    <value>Скопировать выделенный текст</value>
+    <value>Скопіювати виділений текст</value>
   </data>
   <data name="CopyScreenTipTitle" xml:space="preserve">
-    <value>Копировать (Ctrl+C)</value>
+    <value>Копіювати (Ctrl+C)</value>
   </data>
   <data name="CutButtonHeader" xml:space="preserve">
-    <value>Вырезать</value>
+    <value>Вирізати</value>
   </data>
   <data name="CutScreenTipText" xml:space="preserve">
-    <value>Вырезать выделенный текст</value>
+    <value>Вирізати виділений текст</value>
   </data>
   <data name="CutScreenTipTitle" xml:space="preserve">
-    <value>Вырезать (Ctrl+X)</value>
+    <value>Вирізати (Ctrl+X)</value>
   </data>
   <data name="DegreeButtonHeader" xml:space="preserve">
-    <value>Градусы</value>
+    <value>Градуси</value>
   </data>
   <data name="DegreeScreenTipText" xml:space="preserve">
-    <value>Использовать градусы как единицы измерения углов</value>
+    <value>Використовувати градуси як одиниці виміру кутів</value>
   </data>
   <data name="DegreeScreenTipTitle" xml:space="preserve">
-    <value>Градусы (Ctrl+Alt+D)</value>
+    <value>Градуси (Ctrl+Alt+D)</value>
   </data>
   <data name="ExpressionsTextBox" xml:space="preserve">
-    <value>Графики:</value>
+    <value>Графіки:</value>
   </data>
   <data name="ExpressionTextBox" xml:space="preserve">
-    <value>Выражение:</value>
+    <value>Вираз:</value>
   </data>
   <data name="FontGroupHeader" xml:space="preserve">
     <value>Шрифт</value>
   </data>
   <data name="FontSizeSpinner" xml:space="preserve">
-    <value>Размер:</value>
+    <value>Розмір:</value>
   </data>
   <data name="GradianButtonHeader" xml:space="preserve">
-    <value>Грады</value>
+    <value>Гради</value>
   </data>
   <data name="GradianScreenTipText" xml:space="preserve">
-    <value>Использовать грады как единицы измерения углов</value>
+    <value>Використовувати гради як одиниці виміру кутів</value>
   </data>
   <data name="GradianScreenTipTitle" xml:space="preserve">
-    <value>Грады (Ctrl+Alt+G)</value>
+    <value>Гради (Ctrl+Alt+G)</value>
   </data>
   <data name="GraphsTab" xml:space="preserve">
-    <value>Графики</value>
+    <value>Графіки</value>
   </data>
   <data name="HomePageTextBox" xml:space="preserve">
     <value>Сайт:</value>
   </data>
   <data name="HomeRibbonTabHeader" xml:space="preserve">
-    <value>Главная</value>
+    <value>Головна</value>
   </data>
   <data name="HyperbolicExpanderHeader" xml:space="preserve">
-    <value>Гиперболические</value>
+    <value>Гіперболічні</value>
   </data>
   <data name="IndexOutOfRangeExceptionError" xml:space="preserve">
-    <value>Возможно, переменные были введены неправильно.</value>
+    <value>Можливо, змінні були введені неправильно.</value>
   </data>
   <data name="InsertRibbonTab" xml:space="preserve">
-    <value>Вставить</value>
+    <value>Вставити</value>
   </data>
   <data name="LogicTab" xml:space="preserve">
-    <value>Логические</value>
+    <value>Логічні</value>
   </data>
   <data name="MathTab" xml:space="preserve">
-    <value>Математические</value>
+    <value>Математичні</value>
   </data>
   <data name="NotSupportedOperationError" xml:space="preserve">
-    <value>Указанная операция не поддерживается.</value>
+    <value>Вказана операція не підтримується.</value>
   </data>
   <data name="NumberAndArithmeticExpanderHeader" xml:space="preserve">
-    <value>Числа и арифметические</value>
+    <value>Числа та арифметичні</value>
   </data>
   <data name="PasteButtonHeader" xml:space="preserve">
-    <value>Вставить</value>
+    <value>Вставити</value>
   </data>
   <data name="PasteScreenTipText" xml:space="preserve">
-    <value>Вставить текст с буфера обмена</value>
+    <value>Вставити текст з буфера обміну</value>
   </data>
   <data name="PasteScreenTipTitle" xml:space="preserve">
-    <value>Вставить (Ctrl+V)</value>
+    <value>Вставити (Ctrl+V)</value>
   </data>
   <data name="RadianButtonHeader" xml:space="preserve">
-    <value>Радианы</value>
+    <value>Радіани</value>
   </data>
   <data name="RadianScreenTipText" xml:space="preserve">
-    <value>Использовать радианы как единицы измерения углов</value>
+    <value>Використовувати радіани як одиниці виміру кутів</value>
   </data>
   <data name="RadianScreenTipTitle" xml:space="preserve">
-    <value>Радианы (Ctrl+Alt+R)</value>
+    <value>Радіани (Ctrl+Alt+R)</value>
   </data>
   <data name="RedoButtonHeader" xml:space="preserve">
-    <value>Вернуть</value>
+    <value>Повтор</value>
   </data>
   <data name="RedoScreenTipText" xml:space="preserve">
-    <value>Вернуть последнее изменение</value>
+    <value>Повторити останню дію</value>
   </data>
   <data name="RedoScreenTipTitle" xml:space="preserve">
-    <value>Вернуть (Ctrl+Y)</value>
+    <value>Повтор (Ctrl+Y)</value>
   </data>
   <data name="ShowGridCheckBox" xml:space="preserve">
-    <value>Показать сетку</value>
+    <value>Показати сітку</value>
   </data>
   <data name="StandartExpanderHeader" xml:space="preserve">
-    <value>Стандартные</value>
+    <value>Стандартні</value>
   </data>
   <data name="TrigonometricExpanderHeader" xml:space="preserve">
-    <value>Тригонометрические</value>
+    <value>Тригонометричні</value>
   </data>
   <data name="TruthTableTab" xml:space="preserve">
-    <value>Таблица истинности</value>
+    <value>Таблиця істинності</value>
   </data>
   <data name="UndoButtonHeader" xml:space="preserve">
-    <value>Отмена</value>
+    <value>Відміна</value>
   </data>
   <data name="UndoScreenTipText" xml:space="preserve">
-    <value>Отменить последнее изменение</value>
+    <value>Відмінити останню дію</value>
   </data>
   <data name="UndoScreenTipTitle" xml:space="preserve">
-    <value>Отмена (Ctrl+Z)</value>
+    <value>Відміна (Ctrl+Z)</value>
   </data>
   <data name="VariableNotFoundExceptionError" xml:space="preserve">
-    <value>Переменная не найдена.</value>
+    <value>Змінна не знайдена.</value>
   </data>
   <data name="VariablesGroupHeader" xml:space="preserve">
-    <value>Переменные</value>
+    <value>Змінні</value>
   </data>
   <data name="VersionTextBox" xml:space="preserve">
-    <value>Версия:</value>
+    <value>Версія:</value>
   </data>
   <data name="ViewRibbonTab" xml:space="preserve">
     <value>Вид</value>
   </data>
   <data name="BitwiseExpanderHeader" xml:space="preserve">
-    <value>Битовые</value>
+    <value>Бітові</value>
   </data>
 </root>
