Added undef function.

--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -315,4 +315,7 @@
   <data name="AssignVariable" xml:space="preserve">
     <value>The value '{1}' was assigned to the variable '{0}'.</value>
   </data>
+  <data name="UndefineVariable" xml:space="preserve">
+    <value>The {0} variable is removed.</value>
+  </data>
 </root>
