--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -315,4 +315,7 @@
   <data name="AssignVariable" xml:space="preserve">
     <value>Змінній '{0}' присвоєно '{1}' значення.</value>
   </data>
+  <data name="UndefineVariable" xml:space="preserve">
+    <value>Змінна {0} видалена.</value>
+  </data>
 </root>
