--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -126,7 +126,7 @@
   <data name="AboutWindowTitle" xml:space="preserve">
     <value>О программе</value>
   </data>
-  <data name="AdditionalExpanderHeader" xml:space="preserve">
+  <data name="AdditionalMathExpanderHeader" xml:space="preserve">
     <value>Дополнительные</value>
   </data>
   <data name="AnglesGroupHeader" xml:space="preserve">
@@ -332,5 +332,8 @@
   </data>
   <data name="ToInputMenuItem" xml:space="preserve">
     <value>В поле для ввода</value>
+  </data>
+  <data name="AdditionalLogicExpanderHeader" xml:space="preserve">
+    <value>Дополнительные</value>
   </data>
 </root>
