--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -126,7 +126,7 @@
   <data name="AboutWindowTitle" xml:space="preserve">
     <value>Про програму</value>
   </data>
-  <data name="AdditionalExpanderHeader" xml:space="preserve">
+  <data name="AdditionalMathExpanderHeader" xml:space="preserve">
     <value>Додаткові</value>
   </data>
   <data name="AnglesGroupHeader" xml:space="preserve">
@@ -332,5 +332,8 @@
   </data>
   <data name="ToInputMenuItem" xml:space="preserve">
     <value>У поле для введеня</value>
+  </data>
+  <data name="AdditionalLogicExpanderHeader" xml:space="preserve">
+    <value>Додаткові</value>
   </data>
 </root>
