--- a/xFunc.Logics/Resources/Resource.ru.resx
+++ b/xFunc.Logics/Resources/Resource.ru.resx
@@ -112,16 +112,19 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>При построении дерева произошла ошибка.</value>
   </data>
   <data name="InvalidExpression" xml:space="preserve">
     <value>Выражение имеет неверный формат.</value>
+  </data>
+  <data name="InvalidInFirst" xml:space="preserve">
+    <value>Ни один элемент не удовлетворяет условию предиката или исходная последовательность пуста.</value>
   </data>
   <data name="InvalidNumberOfVariables" xml:space="preserve">
     <value>Функция имеет неверное количество переменных.</value>
