--- a/xFunc.Logics/Resources/Resource.uk.resx
+++ b/xFunc.Logics/Resources/Resource.uk.resx
@@ -112,16 +112,19 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>При побудові дерева сталася помилка.</value>
   </data>
   <data name="InvalidExpression" xml:space="preserve">
     <value>Вираз має невірний формат.</value>
+  </data>
+  <data name="InvalidInFirst" xml:space="preserve">
+    <value>Жоден елемент не задовольняє умові предиката або початкова послідовність порожня.</value>
   </data>
   <data name="InvalidNumberOfVariables" xml:space="preserve">
     <value>Функція має невірну кількість змінних.</value>
