--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -112,11 +112,17 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AssignFunction" xml:space="preserve">
+    <value>The expression '{1}' was assigned to the function '{0}'.</value>
+  </data>
+  <data name="AssignVariable" xml:space="preserve">
+    <value>The value '{1}' was assigned to the variable '{0}'.</value>
+  </data>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>An error occurred while parsing the tree.</value>
   </data>
@@ -140,6 +146,12 @@
   </data>
   <data name="NotSupportedToken" xml:space="preserve">
     <value>The type of token is not supported.</value>
+  </data>
+  <data name="UndefineFunction" xml:space="preserve">
+    <value>The '{0}' function is removed.</value>
+  </data>
+  <data name="UndefineVariable" xml:space="preserve">
+    <value>The '{0}' variable is removed.</value>
   </data>
   <data name="UnexpectedError" xml:space="preserve">
     <value>Unexpected error.</value>
