--- a/xFunc.Maths/Resources/Resource.ru.resx
+++ b/xFunc.Maths/Resources/Resource.ru.resx
@@ -112,11 +112,17 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AssignFunction" xml:space="preserve">
+    <value>Функции '{0}' присвоено выражение '{1}'.</value>
+  </data>
+  <data name="AssignVariable" xml:space="preserve">
+    <value>Переменной '{0}' присвоено '{1}' значение.</value>
+  </data>
   <data name="ErrorWhileParsingTree" xml:space="preserve">
     <value>При построении дерева произошла ошибка.</value>
   </data>
@@ -140,6 +146,12 @@
   </data>
   <data name="NotSupportedToken" xml:space="preserve">
     <value>Тип токена не подходит.</value>
+  </data>
+  <data name="UndefineFunction" xml:space="preserve">
+    <value>Функция '{0}' удалена.</value>
+  </data>
+  <data name="UndefineVariable" xml:space="preserve">
+    <value>Переменная '{0}' удалена.</value>
   </data>
   <data name="UnexpectedError" xml:space="preserve">
     <value>Неожидаемая ошибка.</value>
