--- a/xFunc.Maths/Resources/Resource.ru.resx
+++ b/xFunc.Maths/Resources/Resource.ru.resx
@@ -147,6 +147,9 @@
   <data name="NotSupportedToken" xml:space="preserve">
     <value>Тип токена не подходит.</value>
   </data>
+  <data name="ReadOnlyError" xml:space="preserve">
+    <value>Вы не можете изменить значение "{0}".</value>
+  </data>
   <data name="UndefineFunction" xml:space="preserve">
     <value>Функция '{0}' удалена.</value>
   </data>
