--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -351,4 +351,28 @@
   <data name="FunctionsTitle" xml:space="preserve">
     <value>Functions</value>
   </data>
+  <data name="FuncNameHeader" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="FuncValueHeader" xml:space="preserve">
+    <value>Value</value>
+  </data>
+  <data name="VarNameHeader" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="VarValueHeader" xml:space="preserve">
+    <value>Value</value>
+  </data>
+  <data name="FuncScreenTitText" xml:space="preserve">
+    <value>Shows the window with all entered functions.</value>
+  </data>
+  <data name="FuncScreenTitTitle" xml:space="preserve">
+    <value>Functions</value>
+  </data>
+  <data name="VarScreenTitText" xml:space="preserve">
+    <value>Shows the window with all entered variables.</value>
+  </data>
+  <data name="VarScreenTitTitle" xml:space="preserve">
+    <value>Variables</value>
+  </data>
 </root>
