--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -372,4 +372,40 @@
   <data name="VarScreenTitTitle" xml:space="preserve">
     <value>Переменные</value>
   </data>
+  <data name="ArccosecantToolTip" xml:space="preserve">
+    <value>Арккосеканс числа. Пример: arccsc(90) or arccosec(90)</value>
+  </data>
+  <data name="ArccosineToolTip" xml:space="preserve">
+    <value>Арккосинус числа. Пример: arccos(90)</value>
+  </data>
+  <data name="ArccotangentToolTip" xml:space="preserve">
+    <value>Арккотангенс числа. Пример: arccot(90) or arcctg(90)</value>
+  </data>
+  <data name="ArcsecantToolTip" xml:space="preserve">
+    <value>Арксеканс числа. Пример: arcsec(90)</value>
+  </data>
+  <data name="ArcsineToolTip" xml:space="preserve">
+    <value>Арксинус числа. Пример: arcsin(1)</value>
+  </data>
+  <data name="ArctangentToolTip" xml:space="preserve">
+    <value>Арктангенс числа. Пример: arctan(90) or arctg(90)</value>
+  </data>
+  <data name="CosecantToolTip" xml:space="preserve">
+    <value>Косеканс числа. Пример: csc(90) or cosec(90)</value>
+  </data>
+  <data name="CosineToolTip" xml:space="preserve">
+    <value>Косинус числа. Пример: cos(90)</value>
+  </data>
+  <data name="CotangentToolTip" xml:space="preserve">
+    <value>Котангенс числа. Пример: cot(90) or ctg(90)</value>
+  </data>
+  <data name="SecantToolTip" xml:space="preserve">
+    <value>Секанс числа. Пример: sec(90)</value>
+  </data>
+  <data name="SineToolTip" xml:space="preserve">
+    <value>Синус числа. Пример: sin(90)</value>
+  </data>
+  <data name="TangentToolTip" xml:space="preserve">
+    <value>Тангенс числа. Пример: tan(90) or tg(90)</value>
+  </data>
 </root>
