--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -408,4 +408,19 @@
   <data name="TangentToolTip" xml:space="preserve">
     <value>Тангенс числа. Пример: tan(90) or tg(90)</value>
   </data>
+  <data name="AbsToolTip" xml:space="preserve">
+    <value>Модуль "x". Пример: abs(-1)</value>
+  </data>
+  <data name="NthRootToolTip" xml:space="preserve">
+    <value>Корень n-ой степени от "x". Пример: root(27, 3)</value>
+  </data>
+  <data name="PowerOfTwoToolTip" xml:space="preserve">
+    <value>"x" в степени 2. Пример: 7^2</value>
+  </data>
+  <data name="PowerOfYToolTip" xml:space="preserve">
+    <value>"x" в степени "y". Пример: 7^4</value>
+  </data>
+  <data name="SquareRootToolTip" xml:space="preserve">
+    <value>Квадратный корень от "x". Пример: sqrt(9)</value>
+  </data>
 </root>
