--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -408,4 +408,19 @@
   <data name="TangentToolTip" xml:space="preserve">
     <value>Тангенс числа. Приклад: tan(90) or tg(90)</value>
   </data>
+  <data name="AbsToolTip" xml:space="preserve">
+    <value>Модуль "x". Приклад: abs(-1)</value>
+  </data>
+  <data name="NthRootToolTip" xml:space="preserve">
+    <value>Корінь n-ого ступеня від "x". Приклад: root(27, 3)</value>
+  </data>
+  <data name="PowerOfTwoToolTip" xml:space="preserve">
+    <value>"x" в ступені 2. Приклад: 7^2</value>
+  </data>
+  <data name="PowerOfYToolTip" xml:space="preserve">
+    <value>"x" в ступені "y". Приклад: 7^4</value>
+  </data>
+  <data name="SquareRootToolTip" xml:space="preserve">
+    <value>Квадратний корінь від "x". Приклад: sqrt(9)</value>
+  </data>
 </root>
